--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>scum-api</title>
+    <title>scum-server</title>
     <script src="/socket.io/socket.io.js"></script></script>
     <script>
       var socket = io.connect(window.location.host);
